--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VITA SEPTEM | Links Oficiais</title>
   <link rel="icon" href="icon.ico" type="image/x-icon"/>
-
-  <!-- Fontes e Ícones -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet"/>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -30,58 +28,55 @@
       animation: bgMove 25s ease infinite;
       color: var(--text-light);
       display: flex; justify-content: center; align-items: center;
-      padding: 1rem;
+      padding: 2vw;
     }
     @keyframes bgMove {
       0%,100% { background-position: 0% 50%; }
       50%    { background-position: 100% 50%; }
     }
     .container {
-      width: 100%; max-width: 460px;
+      width: min(100%, 900px); /* Até 900px no máximo */
       background: var(--glass);
       backdrop-filter: var(--blur);
       border-radius: 1.5rem;
-      padding: 2rem;
+      padding: clamp(1rem, 3vw, 3rem);
       text-align: center;
       box-shadow: 0 8px 20px rgba(198,40,40,0.15);
     }
-    .logo { width: 120px; margin-bottom: 1rem; }
+    .logo {
+      width: clamp(80px, 12vw, 150px);
+      margin-bottom: 1rem;
+    }
     .hero h1 {
-      font-size: 2.2rem; font-weight: 800; text-transform: uppercase;
-      margin-bottom: .5rem; color: var(--text-light);
+      font-size: clamp(1.8rem, 4vw, 3rem);
+      font-weight: 800;
+      text-transform: uppercase;
+      margin-bottom: .5rem;
     }
     .hero h1 span { color: var(--red-dark); }
     .subtitle {
-      font-size: 1rem; color: var(--red-light); margin-bottom: 2rem;
+      font-size: clamp(0.9rem, 1.5vw, 1.2rem);
+      color: var(--red-light);
+      margin-bottom: 2rem;
     }
     .links {
-      display: flex; flex-direction: column; gap: 1rem; margin-bottom: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-bottom: 2rem;
     }
     .link-card {
-      position: relative;
       display: flex; align-items: center; justify-content: center;
-      gap: .75rem; padding: 1rem;
+      gap: .75rem; padding: clamp(0.8rem, 1.5vw, 1.2rem);
       background: var(--glass); backdrop-filter: var(--blur);
       border-radius: 14px; text-decoration: none;
       color: var(--text-light); font-weight: 600;
       border: 2px solid transparent;
       transform: translateY(20px); opacity: 0;
       transition: all .5s ease;
-      overflow: hidden;
+      font-size: clamp(0.9rem, 1.5vw, 1.1rem);
     }
-    .link-card::after {
-      content: '';
-      position: absolute; bottom: 0; left: 50%;
-      transform: translateX(-50%) scaleX(0);
-      width: 80%; height: 3px; background: var(--red-dark);
-      transition: transform .3s ease;
-    }
-    .link-card:hover::after {
-      transform: translateX(-50%) scaleX(1);
-    }
-    .link-card.visible {
-      transform: translateY(0); opacity: 1;
-    }
+    .link-card.visible { transform: translateY(0); opacity: 1; }
     .link-card:hover {
       background: var(--grad); color: var(--bg-dark);
       border-color: var(--text-light);
@@ -89,32 +84,41 @@
       box-shadow: 0 0 24px rgba(198,40,40,0.4);
     }
     .link-card i {
-      width: 22px; height: 22px; font-size: 22px;
+      width: clamp(20px, 2vw, 28px);
+      height: clamp(20px, 2vw, 28px);
     }
     .newsletter h2 {
-      font-size: 1.2rem; margin-bottom: 1rem;
+      font-size: clamp(1rem, 2vw, 1.4rem);
+      margin-bottom: 1rem;
     }
     .newsletter form {
-      display: flex; gap: .5rem;
+      display: flex; flex-wrap: wrap;
+      gap: .5rem;
     }
     .newsletter input {
-      flex: 1; padding: .75rem 1rem;
+      flex: 1; padding: clamp(0.6rem, 1vw, 0.8rem) 1rem;
       border: none; border-radius: .75rem;
+      font-size: clamp(0.9rem, 1.5vw, 1rem);
+      min-width: 200px;
     }
     .newsletter button {
-      padding: .75rem 1.5rem; border: none; border-radius: .75rem;
+      padding: clamp(0.6rem, 1vw, 0.8rem) clamp(1rem, 2vw, 1.5rem);
+      border: none; border-radius: .75rem;
       background: var(--red-dark); color: #fff; font-weight: 600;
       cursor: pointer; transition: background .3s ease, transform .3s ease;
+      font-size: clamp(0.9rem, 1.5vw, 1rem);
     }
     .newsletter button:hover {
       background: var(--red-light); transform: scale(1.02);
     }
     footer {
-      margin-top: 2rem; font-size: .85rem; color: #aaa;
+      margin-top: 2rem; font-size: clamp(0.7rem, 1vw, 0.9rem); color: #aaa;
     }
-    @media (max-width: 480px) {
-      .hero h1 { font-size: 1.8rem; }
-      .link-card { font-size: .95rem; padding: .9rem; }
+
+    /* Ajuste para telas grandes (TVs, monitores ultrawide) */
+    @media (min-width: 1600px) {
+      .container { border-radius: 2rem; }
+      .link-card { font-size: 1.3rem; }
     }
   </style>
 </head>
